--- a/m01/index.html
+++ b/m01/index.html
@@ -10,7 +10,7 @@
     <h2>Created by: James Kim</h2>
       <hr>
     <h3>Easy Chicken Alfredo</h3>
-      </figure>
+      <figure>
         <img scr="https://www.allrecipes.com/thmb/G1dxO1Dupy30ASa8gJ66GHGhG14=/1500x0/filters:no_upscale():max_bytes(150000)
                   :strip_icc():format(webp)/11970easy-chicken-alfredofabeveryday2x1-a4112dbccf3d4149a18eb45435e77115.jpg"
                   alt="Chicken Alfredo" title="Chicken Alfredo" />
