--- a/a1/index.html
+++ b/a1/index.html
@@ -108,7 +108,6 @@
       Tennis, volleyball, surfing, pottery, graphic design
     </p>
   <h2>REFEREES</h2>
-    <p>
       <address>
         Mr Juan Maciel<br>
         Events Manager<br>
@@ -118,10 +117,8 @@
         Sao Paulo BRAZIL<br>
         Ph:   +555 111 999<br>
         Fax: +555 111 998<br>
-        Email: juanmaciel@moemamktg.br	
+        Email: juanmaciel@moemamktg.br<br><br>	
       </address>
-    </p>
-    <p>
       <address>
         Ms Izabela Monteiro<br>
         Marketing Manager<br>
@@ -133,7 +130,6 @@
         Fax: +555 222 334<br>
         Email: izabelam@artofmarketing.com
       </address>
-    </p>
     <p>
       <a href="http://validator.w3.org/check?uri=referer" target="_blank"><img src="https://www.w3.org/html/logo/badge/html5-badge-h-css3-semantics.png" width="165" height="64" alt="HTML5" title="HTML5"></a>
     </p>
