--- a/a1/index.html
+++ b/a1/index.html
@@ -9,7 +9,7 @@
   <h1>CURRICULUM VITAE CLAUDIA MARTINEZ</h1>
     <hr>
   <figure>
-    <img scr="https://cdn.pixabay.com/photo/2018/11/13/21/43/avatar-3814049_1280.png"
+    <img src="https://cdn.pixabay.com/photo/2018/11/13/21/43/avatar-3814049_1280.png"
          alt="Profile Picture" />
   </figure>
   <h2>PERSONAL DETAILS</h2>
