--- a/a1/index.html
+++ b/a1/index.html
@@ -27,7 +27,7 @@
     <p>
       <strong>May 2006 – Current</strong><br>
       <i>University of Sao Paulo, Sao Paulo BRAZIL</i><br>
-      <a href="http//:www.fe.usp.br">http//:www.fe.usp.br</a><br>
+      <a href="http//:www.fe.usp.br" target="_blank">http//:www.fe.usp.br</a><br>
       Masters in International Marketing<br>
       Expected graduation: Oct 2007
     </p>
@@ -45,7 +45,7 @@
     <p>
       Jan 2006 – Current<br>
       MOEMA MARKETING, Sao Paulo BRAZIL<br> 
-      <a href="http://www.moemamkt.com.br">http://www.moemamkt.com.br</a><br>
+      <a href="http://www.moemamkt.com.br" target="_blank">http://www.moemamkt.com.br</a><br>
       Marketing Trainee – Casual (weekends and holidays)
     </p>
   <h3>Responsibilities and achievements:</h3>
@@ -59,7 +59,7 @@
     <p>
       Jun 2006 – Sep 2006<br>
       THE ART OF MARKETING, Sao Paulo BRAZIL<br>
-      <a href="http://www.artofmarketing.com">http://www.artofmarketing.com</a><br>
+      <a href="http://www.artofmarketing.com" target="_blank">http://www.artofmarketing.com</a><br>
       Internship – 12 weeks full-time
     </p>
   <h3>Responsibilities and achievements:</h3>
