--- a/m01/index.html
+++ b/m01/index.html
@@ -11,8 +11,7 @@
       <hr>
     <h3>Easy Chicken Alfredo</h3>
       <figure>
-        <img scr="https://www.allrecipes.com/thmb/G1dxO1Dupy30ASa8gJ66GHGhG14=/1500x0/filters:no_upscale():max_bytes(150000)
-                  :strip_icc():format(webp)/11970easy-chicken-alfredofabeveryday2x1-a4112dbccf3d4149a18eb45435e77115.jpg"
+        <img scr="https://www.allrecipes.com/thmb/G1dxO1Dupy30ASa8gJ66GHGhG14=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/11970easy-chicken-alfredofabeveryday2x1-a4112dbccf3d4149a18eb45435e77115.jpg"
                   alt="Chicken Alfredo" title="Chicken Alfredo" />
         <p>
             <figcaption>
@@ -26,24 +25,19 @@
     <h4>More Recipes:</h4>
           <p>
               <a target="_blank" href="https://www.allrecipes.com/recipe/86047/garlic-chicken-fried-chicken/">
-                <img src="https://www.allrecipes.com/thmb/7qoTZ8Oe2oL92cbYYlSWAwVU8As=/282x188/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)
-                          /8349113-garlic-chicken-fried-chicken-Tacita-Lady_T-Beautiful-1x1-1-434fa1b59efc48db9a0a351322e3f45a.jpg"
+                <img src="https://www.allrecipes.com/thmb/7qoTZ8Oe2oL92cbYYlSWAwVU8As=/282x188/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8349113-garlic-chicken-fried-chicken-Tacita-Lady_T-Beautiful-1x1-1-434fa1b59efc48db9a0a351322e3f45a.jpg"
                           alt="Garlic Chicken Fried Chicken" /></a>
               <a target="_blank" href="https://www.allrecipes.com/recipe/16573/chicken-fried-chicken/">
-                <img src="https://www.allrecipes.com/thmb/HWPuDHueWrkYS5sYOoenl6R4i4U=/282x188/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)
-                          /3651781-810e0b61706349279c2fe7d7eca7363e.jpg" 
+                <img src="https://www.allrecipes.com/thmb/HWPuDHueWrkYS5sYOoenl6R4i4U=/282x188/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/3651781-810e0b61706349279c2fe7d7eca7363e.jpg" 
                           alt="Chicken Fried Chicken" /></a>
               <a target="_blank" href="https://www.allrecipes.com/recipe/8805/crispy-fried-chicken/">
-                <img src="https://www.allrecipes.com/thmb/fKupDcm9QuBp5lF9J1pnc4HkAzg=/282x188/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)
-                          /8805-CrispyFriedChicken-mfs-3x2-072-d55b8406d4ae45709fcdeb58a04143c2.jpg"
+                <img src="https://www.allrecipes.com/thmb/fKupDcm9QuBp5lF9J1pnc4HkAzg=/282x188/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8805-CrispyFriedChicken-mfs-3x2-072-d55b8406d4ae45709fcdeb58a04143c2.jpg"
                           alt="Crispy Fried Chicken" /></a>
               <a target="_blank" href="https://www.allrecipes.com/recipe/223042/chicken-parmesan/">
-                <img src="https://www.allrecipes.com/thmb/7po6qDnWblOQJf9RMUT0WRoPPKM=/282x188/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)
-                          /223042-Chicken-Parmesan-mfs_003-915dc0e0523e4a0cacaef7821dcd1e63.jpg"
+                <img src="https://www.allrecipes.com/thmb/7po6qDnWblOQJf9RMUT0WRoPPKM=/282x188/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/223042-Chicken-Parmesan-mfs_003-915dc0e0523e4a0cacaef7821dcd1e63.jpg"
                           alt="Chicken Parmesan" /></a>
               <a target="_blank" href="https://www.allrecipes.com/recipe/8635/southern-fried-chicken/">
-                <img src="https://www.allrecipes.com/thmb/9ImPeqqngmYUd1PMfeV_7Er5c_k=/282x188/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)
-                          /8635-southern-fried-chicken-ddmfs_4x3-90736ab31a7a4bb59eb04e2380ccebe7.jpg"
+                <img src="https://www.allrecipes.com/thmb/9ImPeqqngmYUd1PMfeV_7Er5c_k=/282x188/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8635-southern-fried-chicken-ddmfs_4x3-90736ab31a7a4bb59eb04e2380ccebe7.jpg"
                           alt="Southern Fried Chicken" /></a>
           </p>  
   </body>
