--- a/m01/index.html
+++ b/m01/index.html
@@ -11,7 +11,7 @@
       <hr>
     <h3>Easy Chicken Alfredo</h3>
       <figure>
-        <img scr="https://www.allrecipes.com/thmb/G1dxO1Dupy30ASa8gJ66GHGhG14=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/11970easy-chicken-alfredofabeveryday2x1-a4112dbccf3d4149a18eb45435e77115.jpg"
+        <img scr="https://www.allrecipes.com/thmb/mRDGK2HVRlAqee-ttiDGG8MAwyo=/282x188/filters:no_upscale():max_bytes(150000):strip_icc():focal(1999x0:2001x2):format(webp)/11970easy-chicken-alfredofabeveryday2x1-a4112dbccf3d4149a18eb45435e77115.jpg"
                   alt="Chicken Alfredo" title="Chicken Alfredo" />
         <p>
             <figcaption>
