--- a/m01/index.html
+++ b/m01/index.html
@@ -11,16 +11,13 @@
       <hr>
     <h3>Easy Chicken Alfredo</h3>
       <figure>
+       <a href="https://www.allrecipes.com/recipe/11970/easy-chicken-alfredo/" target="_blank">
         <img src="https://www.allrecipes.com/thmb/mRDGK2HVRlAqee-ttiDGG8MAwyo=/282x188/filters:no_upscale():max_bytes(150000):strip_icc():focal(1999x0:2001x2):format(webp)/11970easy-chicken-alfredofabeveryday2x1-a4112dbccf3d4149a18eb45435e77115.jpg"
-                  alt="Chicken Alfredo" title="Chicken Alfredo" />
-        <p>
+             alt="Chicken Alfredo" title="Chicken Alfredo" /></a>
+        <p> </p>
             <figcaption>
               This is an easy chicken alfredo recipe!
-            </figcaption>
-            <a href="https://www.allrecipes.com/recipe/11970/easy-chicken-alfredo/" target="_blank">
-              Chicken Alfredo Recipe</a>
-              (Opens in new window)
-        </p>
+            </figcaption>  
       </figure>
     <h4>More Recipes:</h4>
           <p>
