--- a/m02/index.html
+++ b/m02/index.html
@@ -1,1 +1,64 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>Module 02</title>
+</head>
+<body>
+  <table border="1">
+    <tr><th colspan="3"><h1>HTML Table Example</h1></th></tr>
+    <tr>
+      <th><img src="https://www.allrecipes.com/thmb/mRDGK2HVRlAqee-ttiDGG8MAwyo=/282x188/filters:no_upscale():max_bytes(150000):strip_icc():focal(1999x0:2001x2):format(webp)/11970easy-chicken-alfredofabeveryday2x1-a4112dbccf3d4149a18eb45435e77115.jpg"
+                 alt="Chicken Alfredo" title="Chicken Alfredo" />
+      </th>
+      <th><h2>Meal Planner</h2></th>
+      <th><h2>Recipe Index #1234</h2></th>
+    </tr>
+    <tr>
+      <th>Week Starting</th>
+      <th>01/15/2025</th>
+      <th>Instructions</th>
+    </tr>
+    <tr>
+      <td><b>Day of the Week</b></td>
+      <td><b>Recipe Name</b></td>
+      <td rowspan="8">
+        <p>Fill a large pot with lightly salted water and bring to a rolling boil. 
+        Cook fettuccine at a boil until tender yet firm to the bite, about 8 minutes. Drain well.</p>
+        <p>While the pasta is cooking, place cubed cooked chicken, Alfredo sauce, frozen 
+        vegetables, mushrooms, and milk in a large saucepan over medium-low heat. 
+        Cook and stir until chicken is heated through and vegetables are tender.</p>
+        <p>Serve warm Alfredo and chicken sauce over cooked noodles.</p>
+      </td>
+    </tr>
+    <tr>
+      <td>Monday</td>
+      <td>Chicken Alfredo</td>
+    </tr>
+    <tr>
+      <td>Tuesday</td>
+      <td>Chicken Salad</td>
+    </tr>
+    <tr>
+      <td>Wednesday</td>
+      <td></td>
+    </tr>
+    <tr>
+      <td>Thursday</td>
+      <td></td>
+    </tr>
+    <tr>
+      <td>Friday</td>
+      <td></td>
+    </tr>
+    <tr>
+      <td>Saturday</td>
+      <td></td>
+    </tr>
+    <tr>
+      <td>Sunday</td>
+      <td></td>
+    </tr>
+</body>
+</html>
