--- a/m02/index.html
+++ b/m02/index.html
@@ -7,13 +7,13 @@
 </head>
 <body>
   <table border="1">
-    <tr><th colspan="3"><h1>HTML Table Example</h1></th></tr>
+    <tr><td colspan="3"><h1>HTML Table Example</h1></td></tr>
     <tr>
       <th><img src="https://www.allrecipes.com/thmb/mRDGK2HVRlAqee-ttiDGG8MAwyo=/282x188/filters:no_upscale():max_bytes(150000):strip_icc():focal(1999x0:2001x2):format(webp)/11970easy-chicken-alfredofabeveryday2x1-a4112dbccf3d4149a18eb45435e77115.jpg"
                  alt="Chicken Alfredo" title="Chicken Alfredo" />
       </th>
-      <th><h2>Meal Planner</h2></th>
-      <th><h2>Recipe Index #1234</h2></th>
+      <td><h2>Meal Planner</h2></td>
+      <td><h2>Recipe Index #1234</h2></td>
     </tr>
     <tr>
       <th>Week Starting</th>
@@ -60,5 +60,6 @@
       <td>Sunday</td>
       <td></td>
     </tr>
+  </table>  
 </body>
 </html>
