--- a/m03/index.html
+++ b/m03/index.html
@@ -4,8 +4,8 @@
 		<title>Module 03</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
-        <link rel="stylesheet" href="style.css" type="text/css"/>
-        <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/dancing" type="text/css"/>
+        <link rel="stylesheet" href="style.css" type="text/css">
+        <link rel="stylesheet" media="screen" href="https://fontlibrary.org/en//face/dancing" type="text/css"/>
 	</head>
 	<body>
 		<h1>The Cottage Garden</h1>
@@ -14,4 +14,3 @@
 		<p>The earliest cottage gardens were more practical than their modern descendants, with an emphasis on vegetables and herbs, along with some fruit trees.</p>
 	</body>
 </html>
-
