--- a/m02/index.html
+++ b/m02/index.html
@@ -6,24 +6,24 @@
   <title>Module 02</title>
 </head>
 <body>
-  <table border="1">
-    <tr><td colspan="3"><h1>HTML Table Example</h1></td></tr>
+  <table style="border: 1px solid black;">
+    <tr><td table style="border: 1px solid black;" colspan="3"><h1 align="center">HTML Table Example</h1></td></tr>
     <tr>
-      <th><img src="https://www.allrecipes.com/thmb/mRDGK2HVRlAqee-ttiDGG8MAwyo=/282x188/filters:no_upscale():max_bytes(150000):strip_icc():focal(1999x0:2001x2):format(webp)/11970easy-chicken-alfredofabeveryday2x1-a4112dbccf3d4149a18eb45435e77115.jpg"
+      <th table style="border: 1px solid black;"><img src="https://www.allrecipes.com/thmb/mRDGK2HVRlAqee-ttiDGG8MAwyo=/282x188/filters:no_upscale():max_bytes(150000):strip_icc():focal(1999x0:2001x2):format(webp)/11970easy-chicken-alfredofabeveryday2x1-a4112dbccf3d4149a18eb45435e77115.jpg"
                  alt="Chicken Alfredo" title="Chicken Alfredo" />
       </th>
-      <td><h2>Meal Planner</h2></td>
-      <td><h2>Recipe Index #1234</h2></td>
+      <td table style="border: 1px solid black;"><h2 align="center">Meal Planner</h2></td>
+      <td table style="border: 1px solid black;"><h2>Recipe Index #1234</h2></td>
     </tr>
     <tr>
-      <th>Week Starting</th>
-      <th>01/15/2025</th>
-      <th>Instructions</th>
+      <th table style="border: 1px solid black;">Week Starting</th>
+      <th table style="border: 1px solid black;">01/15/2025</th>
+      <th table style="border: 1px solid black;">Instructions</th>
     </tr>
     <tr>
-      <td><b>Day of the Week</b></td>
-      <td><b>Recipe Name</b></td>
-      <td rowspan="8">
+      <td table style="border: 1px solid black;"><b>Day of the Week</b></td>
+      <td table style="border: 1px solid black;"><b>Recipe Name</b></td>
+      <td table style="border: 1px solid black;" rowspan="8">
         <p>Fill a large pot with lightly salted water and bring to a rolling boil. 
         Cook fettuccine at a boil until tender yet firm to the bite, about 8 minutes. Drain well.</p>
         <p>While the pasta is cooking, place cubed cooked chicken, Alfredo sauce, frozen 
@@ -33,32 +33,32 @@
       </td>
     </tr>
     <tr>
-      <td>Monday</td>
-      <td>Chicken Alfredo</td>
+      <td table style="border: 1px solid black;">Monday</td>
+      <td table style="border: 1px solid black;">Chicken Alfredo</td>
     </tr>
     <tr>
-      <td>Tuesday</td>
-      <td>Chicken Salad</td>
+      <td table style="border: 1px solid black;">Tuesday</td>
+      <td table style="border: 1px solid black;">Chicken Salad</td>
     </tr>
     <tr>
-      <td>Wednesday</td>
-      <td></td>
+      <td table style="border: 1px solid black;">Wednesday</td>
+      <td table style="border: 1px solid black;"></td>
     </tr>
     <tr>
-      <td>Thursday</td>
-      <td></td>
+      <td table style="border: 1px solid black;">Thursday</td>
+      <td table style="border: 1px solid black;"></td>
     </tr>
     <tr>
-      <td>Friday</td>
-      <td></td>
+      <td table style="border: 1px solid black;">Friday</td>
+      <td table style="border: 1px solid black;"></td>
     </tr>
     <tr>
-      <td>Saturday</td>
-      <td></td>
+      <td table style="border: 1px solid black;">Saturday</td>
+      <td table style="border: 1px solid black;"></td>
     </tr>
     <tr>
-      <td>Sunday</td>
-      <td></td>
+      <td table style="border: 1px solid black;">Sunday</td>
+      <td table style="border: 1px solid black;"></td>
     </tr>
   </table>  
 </body>
