--- a/m02/index.html
+++ b/m02/index.html
@@ -6,6 +6,7 @@
       <title>Module 02</title>
    </head>
    <body>
+    <table>
       <table style="border: 1px solid black;">
          <tr>
             <td table style="border: 1px solid black;" colspan="3">
