--- a/m02/index.html
+++ b/m02/index.html
@@ -6,11 +6,10 @@
       <title>Module 02</title>
    </head>
    <body>
-    <table>
       <table style="border: 1px solid black;">
          <tr>
             <td table style="border: 1px solid black;" colspan="3">
-               <h1 align="center">HTML Table Example</h1>
+               <h1 style="text-align: center;">HTML Table Example</h1>
             </td>
          </tr>
          <tr>
@@ -18,7 +17,7 @@
                alt="Chicken Alfredo" title="Chicken Alfredo" />
             </th>
             <td table style="border: 1px solid black;">
-               <h2 align="center">Meal Planner</h2>
+               <h2 style="text-align: center;">Meal Planner</h2>
             </td>
             <td table style="border: 1px solid black;">
                <h2>Recipe Index #1234</h2>
