--- a/m02/index.html
+++ b/m02/index.html
@@ -8,30 +8,30 @@
    <body>
       <table style="border: 1px solid black;">
          <tr>
-            <td table style="border: 1px solid black;" colspan="3">
+            <td style="border: 1px solid black;" colspan="3">
                <h1 style="text-align: center;">HTML Table Example</h1>
             </td>
          </tr>
          <tr>
-            <th table style="border: 1px solid black;"><img src="https://www.allrecipes.com/thmb/mRDGK2HVRlAqee-ttiDGG8MAwyo=/282x188/filters:no_upscale():max_bytes(150000):strip_icc():focal(1999x0:2001x2):format(webp)/11970easy-chicken-alfredofabeveryday2x1-a4112dbccf3d4149a18eb45435e77115.jpg"
+            <th style="border: 1px solid black;"><img src="https://www.allrecipes.com/thmb/mRDGK2HVRlAqee-ttiDGG8MAwyo=/282x188/filters:no_upscale():max_bytes(150000):strip_icc():focal(1999x0:2001x2):format(webp)/11970easy-chicken-alfredofabeveryday2x1-a4112dbccf3d4149a18eb45435e77115.jpg"
                alt="Chicken Alfredo" title="Chicken Alfredo" />
             </th>
-            <td table style="border: 1px solid black;">
+            <td style="border: 1px solid black;">
                <h2 style="text-align: center;">Meal Planner</h2>
             </td>
-            <td table style="border: 1px solid black;">
+            <td style="border: 1px solid black;">
                <h2>Recipe Index #1234</h2>
             </td>
          </tr>
          <tr>
-            <th table style="border: 1px solid black;">Week Starting</th>
-            <th table style="border: 1px solid black;">01/15/2025</th>
-            <th table style="border: 1px solid black;">Instructions</th>
+            <th style="border: 1px solid black;">Week Starting</th>
+            <th style="border: 1px solid black;">01/15/2025</th>
+            <th style="border: 1px solid black;">Instructions</th>
          </tr>
          <tr>
-            <td table style="border: 1px solid black;"><b>Day of the Week</b></td>
-            <td table style="border: 1px solid black;"><b>Recipe Name</b></td>
-            <td table style="border: 1px solid black;" rowspan="8">
+            <td style="border: 1px solid black;"><b>Day of the Week</b></td>
+            <td style="border: 1px solid black;"><b>Recipe Name</b></td>
+            <td style="border: 1px solid black;" rowspan="8">
                <p>Fill a large pot with lightly salted water and bring to a rolling boil. 
                   Cook fettuccine at a boil until tender yet firm to the bite, about 8 minutes. Drain well.
                </p>
@@ -43,32 +43,32 @@
             </td>
          </tr>
          <tr>
-            <td table style="border: 1px solid black;">Monday</td>
-            <td table style="border: 1px solid black;">Chicken Alfredo</td>
+            <td style="border: 1px solid black;">Monday</td>
+            <td style="border: 1px solid black;">Chicken Alfredo</td>
          </tr>
          <tr>
-            <td table style="border: 1px solid black;">Tuesday</td>
-            <td table style="border: 1px solid black;">Chicken Salad</td>
+            <td style="border: 1px solid black;">Tuesday</td>
+            <td style="border: 1px solid black;">Chicken Salad</td>
          </tr>
          <tr>
-            <td table style="border: 1px solid black;">Wednesday</td>
-            <td table style="border: 1px solid black;"></td>
+            <td style="border: 1px solid black;">Wednesday</td>
+            <td style="border: 1px solid black;"></td>
          </tr>
          <tr>
-            <td table style="border: 1px solid black;">Thursday</td>
-            <td table style="border: 1px solid black;"></td>
+            <td style="border: 1px solid black;">Thursday</td>
+            <td style="border: 1px solid black;"></td>
          </tr>
          <tr>
-            <td table style="border: 1px solid black;">Friday</td>
-            <td table style="border: 1px solid black;"></td>
+            <td style="border: 1px solid black;">Friday</td>
+            <td style="border: 1px solid black;"></td>
          </tr>
          <tr>
-            <td table style="border: 1px solid black;">Saturday</td>
-            <td table style="border: 1px solid black;"></td>
+            <td style="border: 1px solid black;">Saturday</td>
+            <td style="border: 1px solid black;"></td>
          </tr>
          <tr>
-            <td table style="border: 1px solid black;">Sunday</td>
-            <td table style="border: 1px solid black;"></td>
+            <td style="border: 1px solid black;">Sunday</td>
+            <td style="border: 1px solid black;"></td>
          </tr>
       </table>
    </body>
