--- a/m05/index.html
+++ b/m05/index.html
@@ -1,1 +1,18 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <html lang="en">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>M05 - Bullseye</title>
+    <link rel="stylesheet" type="text/css" href="css/c04.css" />
+  </head>
+  <body>
+    <section id="page2">
+      <h1>Bullseye</h1>
+      <img src="https://javascriptbook.com/code/c04/images/teacher.png" id="teacher2" alt="" />
+      <section id="blackboard"></section>
+    </section>
+    <script src="js/example.js"></script>
+  </body>
+</html>
