--- a/m05/index.html
+++ b/m05/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>M05 - Bullseye</title>
-    <link rel="stylesheet" type="text/css" href="css/c04.css" />
+    <link rel="stylesheet" type="text/css" href="c04.css" />
   </head>
   <body>
     <section id="page2">
@@ -13,6 +13,6 @@
       <img src="https://javascriptbook.com/code/c04/images/teacher.png" id="teacher2" alt="" />
       <section id="blackboard"></section>
     </section>
-    <script src="js/example.js"></script>
+    <script src="example.js"></script>
   </body>
 </html>
