--- a/m05/index.html
+++ b/m05/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <title>M05 - Bullseye</title>
     <link rel="stylesheet" type="text/css" href="c04.css" />
+    <link rel="stylesheet" media="screen" href="https://fonts.googleapis.com/css?family=Wellfleet" type="text/css">
   </head>
   <body>
     <section id="page2">
