--- a/midterm/thankyou.html
+++ b/midterm/thankyou.html
@@ -1,1 +1,66 @@
-
+<!DOCTYPE html>
+<html lang="en">
+   <head>
+      <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+      <meta name="description" content="Web-based Portfolio" />
+      <meta name="keywords" content="Portfolio" />
+      <link rel="stylesheet" type="text/css" href="style.css" />
+      <!--Added font "Lato" from Google Fonts-->
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+      <title>Web-based Portfolio Design - James Kim</title>
+   </head>
+   <body>
+      <div id="wrap">
+         <div id="header">
+            <!--Changed Header-->
+            <h1>Web-based Portfolio Design</h1>
+            <h2>James Kim</h2>
+         </div>
+         <div id="topmenu">
+            <div class="search"></div>
+            <ul>
+               <!--Added 8 horizontal menus-->
+               <li><a href="index.html">Home</a></li>
+               <li><a href="about.html">About</a></li>
+               <li><a href="courses.html">Courses</a></li>
+               <li><a href="artifacts.html">Artifacts</a></li>
+               <li><a href="module.html">Module Assignments</a></li>
+               <li><a href="contact.html">Contact Me</a></li>
+               <li><a href="creative.html">Creative Page</a></li>
+               <li><a href="validated.html">Validated</a></li>
+            </ul>
+         </div>
+         <div id="content">
+            <!--Thank you page for submitting contact info-->
+            <h2>Thank you</h2>
+            <p></p>
+         </div>
+         <div class="clear"> </div>
+      </div>
+      <div class="clear"> </div>
+      <div id="footer">
+         <div class="left">
+            Copyright &copy; Year by <a href="#">Your Website</a>
+            <!-- W3C Markup Validator -->
+            <p>
+               <a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" 
+                  height="31" width="88" /></a>&nbsp;
+               <!-- W3C CSS Validator -->
+               <a href="http://jigsaw.w3.org/css-validator/check/referer">
+               <img style="border:0;width:88px;height:31px"
+                  src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
+                  alt="Valid CSS!" />
+               </a>
+            </p>
+         </div>
+         <div class="right">
+            <!-- Please consider leaving the credit - link back to our website in the footer intact or if you want to remove it please buy link back free license on http://www.simpletemplates.org/simple-website-template-1.html
+               -->
+            Design by <a href="http://www.simpletemplates.org">Simple Website Templates</a>
+         </div>
+         <div class="clear"> </div>
+      </div>
+   </body>
+</html>
