--- a/midterm/contact.html
+++ b/midterm/contact.html
@@ -4,7 +4,7 @@
       <meta http-equiv="content-type" content="text/html; charset=utf-8" />
       <meta name="description" content="Web-based Portfolio" />
       <meta name="keywords" content="Portfolio" />
-      <link rel="stylesheet" type="text/css" href="style.css" />
+      <link rel="stylesheet" type="text/css" href="css/style.css" />
       <!--Added font "Lato" from Google Fonts-->
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
