--- a/midterm/validated.html
+++ b/midterm/validated.html
@@ -1,1 +1,90 @@
-
+<!DOCTYPE html>
+<html lang="en">
+   <head>
+      <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+      <meta name="description" content="Web-based Portfolio" />
+      <meta name="keywords" content="Portfolio" />
+      <link rel="stylesheet" type="text/css" href="css/style.css" />
+      <!--Added font "Lato" from Google Fonts-->
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+      <title>Web-based Portfolio Design - James Kim</title>
+   </head>
+   <body>
+      <div id="wrap">
+         <div id="header">
+            <!--Changed Header-->
+            <h1>Web-based Portfolio Design</h1>
+            <h2>James Kim</h2>
+         </div>
+         <div id="topmenu">
+            <div class="search"></div>
+            <ul>
+               <!--Added 8 horizontal menus-->
+               <li><a href="index.html">Home</a></li>
+               <li><a href="about.html">About</a></li>
+               <li><a href="courses.html">Courses</a></li>
+               <li><a href="artifacts.html">Artifacts</a></li>
+               <li><a href="modules.html">Module Assignments</a></li>
+               <li><a href="contact.html">Contact Me</a></li>
+               <li><a href="creative.html">Creative Page</a></li>
+               <li><a href="validated.html">Validated</a></li>
+            </ul>
+         </div>
+         <div id="content">
+            <!--Validation Page-->
+            <h2>Validated</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et eveniet neque consequatur provident? Quia distinctio, repudiandae maiores suscipit laudantium impedit dicta reprehenderit earum hic aspernatur nemo, consequatur, commodi optio nisi?</p>
+            <div class="row">
+               <div class="column">
+                  <h3>HTML</h3>
+                  <p>HTML Validation index.html</p>
+                  <img src="https://raw.githubusercontent.com/ValeriaV-8/dev109/refs/heads/main/midterm/images/HTML_Validation_index.png" alt="HTML Validation index.html" title="HTML Validation index.html" width="500" height="200">
+                  <p>HTML Validation about.html</p>
+                  <img src="https://raw.githubusercontent.com/ValeriaV-8/dev109/refs/heads/main/midterm/images/HTML_Validation_about.png" alt="HTML Validation about.html" title="HTML Validation about.html" width="500" height="200">
+                  <p>HTML Validation courses.html</p>
+                  <img src="https://raw.githubusercontent.com/ValeriaV-8/dev109/refs/heads/main/midterm/images/HTML_Validation_courses.png" alt="HTML Validation courses.html" title="HTML Validation courses.html" width="500" height="200">
+                  <p>HTML Validation artifacts.html</p>
+                  <img src="https://raw.githubusercontent.com/ValeriaV-8/dev109/refs/heads/main/midterm/images/HTML_Validation_artifacts.png" alt="HTML Validation artifacts.html" title="HTML Validation artifacts.html" width="500" height="200">
+                  <p>HTML Validation modules.html</p>
+                  <img src="https://raw.githubusercontent.com/ValeriaV-8/dev109/refs/heads/main/midterm/images/HTML_Validation_modules.png" alt="HTML Validation modules.html" title="HTML Validation modules.html" width="500" height="200">
+                  <p>HTML Validation thankyou.html</p>
+                  <img src="https://raw.githubusercontent.com/ValeriaV-8/dev109/refs/heads/main/midterm/images/HTML_Validation_thankyou.png" alt="HTML Validation thankyou.html" title="HTML Validation thankyou.html" width="500" height="200">
+                  <p>HTML Validation creative.html</p>
+                  <img src="https://raw.githubusercontent.com/ValeriaV-8/dev109/refs/heads/main/midterm/images/HTML_Validation_creative.png" alt="HTML Validation creative.html" title="HTML Validation creative.html" width="500" height="200">
+               </div>
+               <div class="column">
+                  <h3>CSS</h3>
+                  <p>CSS Validation</p>
+                  <img src="https://raw.githubusercontent.com/ValeriaV-8/dev109/4d84e6b8cb89b8d43524dbf6c3156ae98c7abc02/midterm/images/CSSValidation.png" alt="CSS Validation" title="CSS Validation" width="500" height="200">
+               </div>
+            </div>
+         </div>
+         <div class="clear"> </div>
+      </div>
+      <div class="clear"> </div>
+      <div id="footer">
+         <div class="left">
+            Copyright &copy; Year by <a href="#">Your Website</a>
+            <!-- W3C Markup Validator -->
+            <p>
+               <a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" 
+                  height="31" width="88" /></a>&nbsp;
+               <!-- W3C CSS Validator -->
+               <a href="http://jigsaw.w3.org/css-validator/check/referer">
+               <img style="border:0;width:88px;height:31px"
+                  src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
+                  alt="Valid CSS!" />
+               </a>
+            </p>
+         </div>
+         <div class="right">
+            <!-- Please consider leaving the credit - link back to our website in the footer intact or if you want to remove it please buy link back free license on http://www.simpletemplates.org/simple-website-template-1.html
+               -->
+            Design by <a href="http://www.simpletemplates.org">Simple Website Templates</a>
+         </div>
+         <div class="clear"> </div>
+      </div>
+   </body>
+</html>
