--- a/midterm/about.html
+++ b/midterm/about.html
@@ -28,7 +28,7 @@
                <li><a href="artifacts.html">Artifacts</a></li>
                <li><a href="modules.html">Module Assignments</a></li>
                <li><a href="contact.html">Contact Me</a></li>
-               <li><a href="creative.html">Creative Page</a></li>
+               <li><a href="creative.html">Civ 6</a></li>
                <li><a href="validated.html">Validated</a></li>
             </ul>
          </div>
