--- a/m07/index.html
+++ b/m07/index.html
@@ -1,1 +1,24 @@
-
+<!DOCTYPE html>
+<html lang="en">
+   <head>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width">
+      <meta name="description" content="Hotel availability.">
+      <meta name="keywords" content="hotel, availability" />
+      <title>Module 07 - Hotel Availability - James Kim</title>
+      <link rel="stylesheet" href="css/c03.css" />
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+   </head>
+   <body>
+      <h1>TravelWorthy</h1>
+      <div id="info">
+         <h2>hotel availability</h2>
+         <div id="hotel1"></div>
+         <div id="hotel2"></div>
+         <div id="hotel3"></div>
+      </div>
+      <script src="js/multiple-objects.js"></script>
+   </body>
+</html>
