--- a/a4/index.html
+++ b/a4/index.html
@@ -50,7 +50,7 @@
             </p>
             <div class="warning" id="city"></div>
             <p>
-                <label for="state select">Choose a state</label>
+                <label for="state-select">Choose a state</label>
                 <select name="states" id="state-select">
                     <option value="">Please select a state</option>
                     <option value="AL">Alabama</option>
@@ -109,7 +109,7 @@
             </p>
             <div class="warning" id="state"></div>
             <p>
-                <label for="country select">Choose a country</label>
+                <label for="country-select">Choose a country</label>
                 <select name="country" id="country-select">
                     <option value="">Please select a country</option>
                     <option value="Afghanistan">Afghanistan</option>
