--- a/a4/index.html
+++ b/a4/index.html
@@ -370,6 +370,16 @@
             <div class="warning" id="submitError"></div>
         </form>
         <script src="js/validator.js"></script>
+        <footer>
+        <p>Author: James Kim</p>
+        <p>
+            <a href="http://jigsaw.w3.org/css-validator/check/referer">
+                <img style="border:0;width:88px;height:31px"
+                    src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
+                    alt="Valid CSS!" />
+                </a>
+            </p>
+        </footer>
     </body>
 </html>
 
