--- a/a4/index.html
+++ b/a4/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="description" content="Artifact 04 - Contact Us">
         <meta charset="utf-8">
-        <link rel="stylesheet" type="text/css" href="css/art4.css" />
+        <link rel="stylesheet" type="text/css" href="art4.css" />
         <title>Artifact 04</title>
     </head>
     <body>
@@ -40,7 +40,7 @@
             </p>
             <div class="warning" id="password"></div>
             <p>
-                <label for='Address'>Address:</label>
+                  <label for='Address'>Address:</label>
                 <input type="text" id="Address" name="Address" /> 
             </p>
             <div class="warning" id="address"></div>
@@ -369,17 +369,13 @@
             </p>
             <div class="warning" id="submitError"></div>
         </form>
-        <script src="js/validator.js"></script>
-        <footer>
+        <script src="validator.js"></script>
+    <footer>
         <p>Author: James Kim</p>
         <p>
-            <a href="https://jigsaw.w3.org/css-validator/validator?lang=en&profile=css3svg&uri=https%3A%2F%2Fvaleriav-8.github.io%2Fdev109%2Fa4%2Findex.html&usermedium=all&vextwarning=&warning=1">
-                <img style="border:0;width:88px;height:31px"
-                    src="https://jigsaw.w3.org/css-validator/images/vcss-blue"
-                    alt="Valid CSS!" />
-                </a>
+            <a href="https://valeriav-8.github.io/dev109/a4/validation.html">Validation</a>
             </p>
-        </footer>
+    </footer>
     </body>
 </html>
 
