--- a/a4/index.html
+++ b/a4/index.html
@@ -373,7 +373,7 @@
     <footer>
         <p>Author: James Kim</p>
         <p>
-            <a href="https://valeriav-8.github.io/dev109/a4/validation.html">Validation</a>
+            <a href="https://valeriav-8.github.io/dev109/a4/validation.html" target="_blank">Validation</a>
             </p>
     </footer>
     </body>
