--- a/a5/index.html
+++ b/a5/index.html
@@ -36,6 +36,10 @@
                 alt="Valid CSS!" />
         </a>
     </p>
+    <p><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fvaleriav-8.github.io%2Fdev109%2Fa5%2Findex.html" target="_blank">
+        <img src="https://www.w3.org/html/logo/badge/html5-badge-h-css3-semantics.png" width="165" height="64" alt="HTML5" title="HTML5">
+    </a>
+    </p>
    </footer>
   </body>
 </html>
