--- a/finalp1/about.html
+++ b/finalp1/about.html
@@ -34,10 +34,29 @@
          </div>
          <div id="content">
             <!--About Page-->
-            <h2>About</h2>
-            <p>
-               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere laborum impedit expedita amet incidunt, excepturi officiis alias illo! Tenetur fugiat ea minima sapiente adipisci praesentium quis? Laboriosam pariatur suscipit non.
+            <h2>About Me</h2>
+            <p>Name: James Kim, 김영규</p>
+            <p>Age: 27 (as of 03/15/2025)</p>
+            <p>I was born in New York where I spent the first 6 years of my life. I then moved to Tennessee where I spent another 6 years before moving to South Korea.
+               I spent another 12 years in South Korea before moving back to the States in pursuit of my future.
             </p>
+            <p>Likes:
+               <ul>
+                  <li>My girlfriend and our little "puppy".</li>
+                  <li>Food</li>
+                  <li>Gaming</li>
+               </ul>
+            </p>
+            <p>Dislikes:
+               <ul>
+                  <li>The heat</li>
+                  <li>Dirty glasses</li>
+                  <li>The feeling of being too full</li>
+               </ul>
+            </p>
+            <p>Academic Goals: Graduating with the certifications for my future career.</p>
+            <p>Professional Goals: Obtain career as a software developer.</p>
+            <p>Group Project: </p>
          </div>
          <div class="clear"> </div>
       </div>
