--- a/finalp1/artifacts.html
+++ b/finalp1/artifacts.html
@@ -35,14 +35,42 @@
          <div id="content">
             <!--Artifact Page-->
             <h2>Artifacts</h2>
-            <ul>
+            <ul id="artifact">
                <li>
+                  <div class="flexContainer">
                   <!--Artifact #1 Resume Link-->
-                  <a href="https://valeriav-8.github.io/dev109/a1/index.html" target="_blank">Artifact #1</a>
+                  <img src="images/resume.png" alt="Resume">
+                  <a class="artLink" href="https://valeriav-8.github.io/dev109/a1/index.html" target="_blank">Artifact #1</a>
+                  <p class="flexText">Resume. Webpage with HTML only.</p>
+                  </div>
                </li>
                <li>
                 <!--Artifact #2 Chessboard Link-->
-                  <a href="https://antonidimes.github.io/dev109/a2/index.html" target="_blank">Artifact #2</a>
+                  <div class="flexContainer">
+                  <img src="images/chessboard.png" alt="chessboard">
+                  <a class="artLink" href="https://valeriav-8.github.io/dev109/a2/index.html" target="_blank">Artifact #2</a>
+                  <p class="flexText">Chessboard. Group project webpage with HTML and CSS</p>
+                  </div>
+               </li>
+               <li>
+                  <div class="flexContainer">
+                  <img src="images/rhombus.jpg" alt="Rhombus">
+                  <a href="https://valeriav-8.github.io/dev109/a03/index.html" target="_blank">Artifact #3</a>
+                  <p class="flexText">Rhombus. Rhombus with inputs to change color and size. Webpage with HTML, CSS and Javascript.</p>
+               </li>
+               <li>
+                  <div class="flexContainer">
+                  <img src="images/contact_us_2.jpg" alt="Contact Us">
+                  <a href="https://valeriav-8.github.io/dev109/a4/index.html" target="_blank">Artifact #4</a>
+                  <p class="flexText">Contact Me Page. Page with information valdiation. Uses HTML, CSS and Javascript.</p>
+                  </div>
+               </li>
+               <li>
+                  <div class="flexContainer">
+                  <img src="images/four_seasons.jpg" alt="Four Season Slideshow">
+                  <a href="https://valeriav-8.github.io/dev109/a5/index.html" target="_blank">Artifact #5</a>
+                  <p class="flexText">Slideshow for the 4 seasons. Uses HTML, CSS and Javascript</p>
+                  </div>
                </li>
             </ul>
          </div>
