--- a/finalp1/courses.html
+++ b/finalp1/courses.html
@@ -34,9 +34,22 @@
          </div>
          <div id="content">
             <!--Courses Page-->
-            <h2>Courses</h2>
-            <p>
-               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere laborum impedit expedita amet incidunt, excepturi officiis alias illo! Tenetur fugiat ea minima sapiente adipisci praesentium quis? Laboriosam pariatur suscipit non.
+            <h2>Courses - Bellevue College, Winter 2025</h2>
+            <p><a href="https://catalog.bellevuecollege.edu/preview_course_nopop.php?catoid=14&coid=57598" target="_blank">DEV 109 - Introduction to Web Development</a>
+               <ul>
+                  <li>Instructor: Adam Brehm</li>
+                  <li>Email: adam.brehm@bellevuecollege.edu</li>
+                  <li>Knowledge Before: Absolutely nothing about webpage coding. I did take Python in a previous course so I had a general understanding about the language "rules".</li>
+                  <li>Knowledge After: Able to write HTML, CSS, Javascript, and able to read and comprehend what a code in a webpage is telling me.</li>
+               </ul>
+            </p>
+            <p><a href="https://catalog.bellevuecollege.edu/preview_course_nopop.php?catoid=14&coid=57007" target="_blank">IT 103 - Networking Basics</a>
+               <ul>
+                  <li>Instructor: Corey T. Fike</li>
+                  <li>Email: Corey.Fike@bellevuecollege.edu</li>
+                  <li>Knowledge Before: Absolutely nothing about cybersecurity. A little bit about networks, mainly internet speed and such.</li>
+                  <li>Knowledge After: Able to comprehend network protocols and troubleshoot problems that might arise in network.</li>
+               </ul>
             </p>
          </div>
          <div class="clear"> </div>
