--- a/finalp1/creative.html
+++ b/finalp1/creative.html
@@ -34,8 +34,14 @@
          </div>
          <div id="content">
             <!--"My Page", Added currently playing game Civ 6-->
-            <h2>Civilization 6</h2>
-            <p></p>
+            <img src="images/civ6_marquee1.jpg" alt="Civ 6">
+            <img src="images/civ-civ6.gif" alt="Civ 6 Get on">
+            <h2><a href="https://store.steampowered.com/app/289070/Sid_Meiers_Civilization_VI/" target="_blank">Sid Meiers Civilization VI</a></h2>
+            <h4>Expand your empire, advance your culture and go head-to-head against history’s greatest leaders. Will your civilization stand the test of time?</h4>
+            <iframe width="450" height="353" src="https://www.youtube.com/embed/5KdE0p2joJw"></iframe><br>
+            <p>This is one game that I have been playing and really enjoying. Its an amazing game, but the only problem is that you don't know time is going by.
+               It is a dangerous game to play when you have a lot of assignments to do.
+            </p>
          </div>
          <div class="clear"> </div>
       </div>
