--- a/finalp1/modules.html
+++ b/finalp1/modules.html
@@ -35,9 +35,46 @@
          <div id="content">
             <!--Module Page-->
             <h2>Module Assignments</h2>
-            <p>
-               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere laborum impedit expedita amet incidunt, excepturi officiis alias illo! Tenetur fugiat ea minima sapiente adipisci praesentium quis? Laboriosam pariatur suscipit non.
-            </p>
+            <div class="modAssign">
+               <img src="images/module1.jpg" alt="Chicken Alfredo">
+               <a href="https://valeriav-8.github.io/dev109/m01/index.html" target="_blank">Module 01: Recipes</a>
+            </div>
+            <div class="modAssign">
+               <img src="images/11970easy-chicken-alfredo.webp" alt="Easy Chicken Alfredo">
+               <a href="https://valeriav-8.github.io/dev109/m02/index.html" target="_blank">Module 02: Meal Planner</a>
+            </div>
+            <div class="modAssign">
+               <img src="images/cottage_garden.avif" alt="Cottage Garden">
+               <a href="https://valeriav-8.github.io/dev109/m03/index.html" target="_blank">Module 03: Cottage Garden</a>
+            </div>
+            <div class="modAssign">
+               <img src="images/website_layout.png" alt="Website Layout">
+               <a href="https://valeriav-8.github.io/dev109/m04/index.html" target="_blank">Module 04: Liquid Layout</a>
+            </div>
+            <div class="modAssign">
+               <img src="images/colorful-multiplication-table.jpg" alt="Multiplication Table">
+               <a href="https://valeriav-8.github.io/dev109/m05/index.html" target="_blank">Module 05: Input Based Multiplication Table</a>
+            </div>
+            <div class="modAssign_1">
+               <img src="images/exams.avif" alt="Exams">
+               <p>Midterms - No Module</p>
+            </div>
+            <div class="modAssign">
+               <img src="images/hotel.jpg" alt="Hotel">
+               <a href="https://valeriav-8.github.io/dev109/m07/index.html" target="_blank">Module 07: Hotel Room Availability</a>
+            </div>
+            <div class="modAssign">
+               <img src="images/todolist.jpg" alt="To Do List">
+               <a href="https://valeriav-8.github.io/dev109/m08/index.html" target="_blank">Module 08: Input Based To-Do List</a>
+            </div>
+            <div class="modAssign">
+               <img src="images/dots.jpg" alt="Dots">
+               <a href="https://valeriav-8.github.io/dev109/m09/index.html" target="_blank">Module 09: Draw Dots Page</a>
+            </div>
+            <div class="modAssign">
+               <img src="images/hotel.jpg" alt="Hotel">
+               <a href="https://valeriav-8.github.io/dev109/m07/index.html" target="_blank">Module 07: Hotel Room Availability</a>
+            </div>
          </div>
          <div class="clear"> </div>
       </div>
