--- a/finalp1/about.html
+++ b/finalp1/about.html
@@ -42,7 +42,7 @@
             </p>
             <p>Likes:
                <ul>
-                  <li>My girlfriend and our little "puppy".</li>
+                  <li>My girlfriend and our little "puppy". I say puppy because she is a tiny dog.</li>
                   <li>Food</li>
                   <li>Gaming</li>
                </ul>
@@ -50,13 +50,13 @@
             <p>Dislikes:
                <ul>
                   <li>The heat</li>
-                  <li>Dirty glasses</li>
+                  <li>Dishonesty</li>
                   <li>The feeling of being too full</li>
                </ul>
             </p>
             <p>Academic Goals: Graduating with the certifications for my future career.</p>
             <p>Professional Goals: Obtain career as a software developer.</p>
-            <p>Group Project: </p>
+            <p><a href="https://valeriav-8.github.io/grp109" target="_blank">Group Project:</a> This is Winter 2025 DEV 109 Group 2 5's project. It is a welcome page for new students at Bellevue College with information that we thought new students would need, all organized on one page. Members are Kai Davey, Katherine Luciano and me!</p>
          </div>
          <div class="clear"> </div>
       </div>
