--- a/finalp1/index.html
+++ b/finalp1/index.html
@@ -34,7 +34,7 @@
          </div>
          <div id="content">
             <!--Welcome/Home Page-->
-            <audio controls src="/music/bella-ciao-italian-partisan-folk-song-from-the-late-19th-century-3052.mp3" type="audio.mpeg">
+            <audio controls src="/music/bella-ciao-italian-partisan-folk-song-from-the-late-19th-century-3052.mp3">
             Your browser does not support the audio element.
             </audio>
             <h2>Welcome to my page!</h2>
@@ -50,7 +50,6 @@
                 <!--Link to original template-->
                 <a href="https://www.simpletemplates.org/simple-website-template-1.html" target="_blank">Original Template</a>
                 <p>This is the original template that I have tweaked.</p>
-            </p>
          </div>
          <div class="clear"> </div>
       </div>
