--- a/finalp1/artifacts.html
+++ b/finalp1/artifacts.html
@@ -57,6 +57,7 @@
                   <img src="images/rhombus.jpg" alt="Rhombus">
                   <a href="https://valeriav-8.github.io/dev109/a03/index.html" target="_blank">Artifact #3</a>
                   <p class="flexText">Rhombus. Rhombus with inputs to change color and size. Webpage with HTML, CSS and Javascript.</p>
+                  </div>
                </li>
                <li>
                   <div class="flexContainer">
