--- a/finalp1/validated.html
+++ b/finalp1/validated.html
@@ -40,24 +40,24 @@
                <div class="column-1">
                   <h3>HTML</h3>
                   <p>HTML Validation index.html</p>
-                  <img src="HTML_Validation_index.png" alt="HTML Validation index.html" title="HTML Validation index.html" >
+                  <img src="images/HTML_Final_Validation_index.png" alt="HTML Validation index.html" title="HTML Validation index.html" >
                   <p>HTML Validation about.html</p>
-                  <img src="HTML_Validation_about.png" alt="HTML Validation about.html" title="HTML Validation about.html" >
+                  <img src="images/HTML_Final_Validation_about.png" alt="HTML Validation about.html" title="HTML Validation about.html" >
                   <p>HTML Validation courses.html</p>
-                  <img src="HTML_Validation_courses.png" alt="HTML Validation courses.html" title="HTML Validation courses.html" >
+                  <img src="images/HTML_Final_Validation_courses.png" alt="HTML Validation courses.html" title="HTML Validation courses.html" >
                   <p>HTML Validation artifacts.html</p>
-                  <img src="HTML_Validation_artifacts.png" alt="HTML Validation artifacts.html" title="HTML Validation artifacts.html" >
+                  <img src="images/HTML_Final_Validation_artifact.png" alt="HTML Validation artifacts.html" title="HTML Validation artifacts.html" >
                   <p>HTML Validation modules.html</p>
-                  <img src="HTML_Validation_modules.png" alt="HTML Validation modules.html" title="HTML Validation modules.html" >
+                  <img src="images/HTML_Final_Validation_modules.png" alt="HTML Validation modules.html" title="HTML Validation modules.html" >
                   <p>HTML Validation thankyou.html</p>
-                  <img src="HTML_Validation_thankyou.png" alt="HTML Validation thankyou.html" title="HTML Validation thankyou.html" >
+                  <img src="images/HTML_Final_Validation_thankyou.png" alt="HTML Validation thankyou.html" title="HTML Validation thankyou.html" >
                   <p>HTML Validation creative.html</p>
-                  <img src="HTML_Validation_creative.png" alt="HTML Validation creative.html" title="HTML Validation creative.html" >
+                  <img src="images/HTML_Final_Validation_creative.png" alt="HTML Validation creative.html" title="HTML Validation creative.html" >
                </div>
                <div class="column-2">
                   <h3>CSS</h3>
                   <p>CSS Validation</p>
-                  <img src="images/CSSValidation.png" alt="CSS Validation" title="CSS Validation" >
+                  <img src="images/CSS_Final_Validation.png" alt="CSS Validation" title="CSS Validation" >
                </div>
             </div>
          </div>
